Got sales welcomeSent update working

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -151,7 +151,7 @@
 							</button>
 							<button id="UnpaidDuesRankingReport" data-reportTitle="Unpaid Dues Ranking Report"
 								type="button" role="button" class="btn btn-warning reportRequest me-1 mb-2">
-								<i class="fa fa-bank"></i> Unpaid Dues Ranking
+								<i class="fa fa-bank"></i> Unpaid Dues Rank
 							</button>
 
 							<div id="ReportsMessageDisplay" class="m-2"></div>
@@ -172,7 +172,7 @@
 							<div class="form-check">
 								<input class="form-check-input shadow-none" type="radio" name="MailingListName" id="MailingListNewsletter" value="Newsletter">
 								<label class="form-check-label ms-2" for="MailingListNewsletter">
-									Newsletter (ALL property addresses)
+									Newsletter (ALL addresses)
 								</label>
 							</div>
 							<div class="form-check">
@@ -190,7 +190,7 @@
 							<div class="form-check form-check-inline ms-4">
 								<input class="form-check-input shadow-none" type="checkbox" id="LogDuesLetterSend" name="LogDuesLetterSend">
 								<label class="form-check-label ms-2" for="LogDuesLetterSend">
-									Mark Dues Letters as MAILED
+									Mark Letters as MAILED
 								</label>
 							</div>
 							<button id="MailingListReport" data-reportTitle="Unpaid Dues Ranking Report"
