completed new owner functionality

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -97,22 +97,17 @@
 									<i class="fa fa-floppy-o me-1"></i> Save Property
 								</button>
 
-								<button id="DuesStatementButton" data-parcel-id="" class="btn btn-success me-1 mb-1 " type="button" role="button">
+								<button id="DuesStatementButton" class="btn btn-success me-1 mb-1 " type="button" role="button">
 									<i class="fa fa-bank me-1"></i> Dues Statement
 								</button>
-								<button id="NewOwnerButton" data-parcel-id="" data-owner-id="" class="btn btn-warning me-1 mb-1 " type="button" role="button">
-									<i class="fa fa-user-circle-o me-1"></i> New Owner Id
+								<button id="NewOwnerButton" class="btn btn-warning me-1 mb-1 " type="button" role="button">
+									<i class="fa fa-user-circle-o me-1"></i> New Owner
 								</button>
-								<button id="CommunicationsButton" data-parcel-id="" data-owner-id="" class="btn btn-info me-1 mb-1 " type="button" role="button">
+								<button id="CommunicationsButton" class="btn btn-info me-1 mb-1 " type="button" role="button">
 									<i class="fa fa-bullhorn me-1"></i> Communications
 								</button>
-								<!--
-								<div id="AddAssessment">
-								</div>
-								-->
 
 								<div id="DetailMessageDisplay" class="m-2"></div>
-								<div id="UpdatePropertyMessageDisplay" class="m-2"></div>
 					</form>
 				</div>
 
@@ -319,8 +314,7 @@
 							<div id="updParcelLocation" class="mb-2">
 								Parcel Location
 							</div>
-
-		                    <div class="form-floating">
+							<div class="form-floating">
 								<input  id="updOwnerID" name="OwnerID" type="text" class="form-control shadow-none" readonly />
 								<label for="updOwnerID">Owner Id</label>
                         	</div>
