added dues counts report

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -191,7 +191,7 @@
 
 					</div>
 				    <div class="col-sm-8 col-md-9 col-xl-10">
-	                	<div id="ReportDownloadLinks" class="float-right m-2"></div>
+	                	<div id="ReportDownloadLinks" class="float-end m-2"></div>
 
                         <h5 id="ReportHeader"></h5>
 	                	<h6 id="ReportRecCnt"></h6>
@@ -199,6 +199,7 @@
 				        	<tbody id="ReportListTbody">
 				        	</tbody>
 				    	</table>
+						
 					</div>
 				</div>
 	    </div><!-- end of Reports -->
