working on reports

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -145,8 +145,15 @@
 								<i class="fa fa-bank"></i> Unpaid Dues Rank
 							</button>
 
-							<div id="ReportsMessageDisplay" class="m-2"></div>
-
+							<button id="Duesletter1Report" data-reportTitle="Dues Letter 1st Notice Mailing List"
+								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2">
+								<i class="fa fa-envelope"></i> Dues Letter 1st Notice
+							</button>
+							<button id="Duesletter2Report" data-reportTitle="Dues Letter 2nd Notice Mailing List"
+								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2">
+								<i class="fa fa-envelope"></i> Dues Letter 2nd Notice
+							</button>
+							<!--
 							<h6 class="mt-2" style="font-weight: bold; text-decoration: underline;">Mailing Lists</h6>
 							<div class="form-check">
 								<input class="form-check-input shadow-none" type="radio" name="MailingListName" id="MailingListWelcomeLetters" value="WelcomeLetters" checked>
@@ -184,10 +191,8 @@
 									Mark Letters as MAILED
 								</label>
 							</div>
-							<button id="MailingListReport" data-reportTitle="Unpaid Dues Ranking Report"
-								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2">
-								<i class="fa fa-envelope"></i> Create List
-							</button>
+							-->
+							<div id="ReportsMessageDisplay" class="m-2"></div>
 
 					</div>
 				    <div class="col-sm-8 col-md-9 col-xl-10">
