modified to update ownerID on assessments

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -455,7 +455,7 @@
 								Parcel Location
 							</div>
 		                    <div class="mb-2 form-floating">
-								<input  id="assOwnerID" name="OwnerID" type="text" class="form-control shadow-none" readonly />
+								<select id="assOwnerID" name="OwnerID" class="form-select shadow-none"></select>
 								<label for="assOwnerID">Owner Id - Name</label>
                         	</div>
 							<input id="assId" name="AssessmentId" type="text" readonly hidden>
