Finished Reports and removed Communications

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -103,9 +103,11 @@
 								<button id="NewOwnerButton" class="btn btn-warning me-1 mb-1 " type="button" role="button">
 									<i class="fa fa-user-circle-o me-1"></i> New Owner
 								</button>
+								<!--
 								<button id="CommunicationsButton" class="btn btn-info me-1 mb-1 " type="button" role="button">
 									<i class="fa fa-bullhorn me-1"></i> Communications
 								</button>
+								-->
 
 								<div id="DetailMessageDisplay" class="m-2"></div>
 					</form>
@@ -588,6 +590,7 @@
     </div>
 </div>
 
+<!--
 <div id="CommunicationsModal" class="modal fade" role="dialog" tabindex="-1">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
@@ -601,7 +604,7 @@
             <div class="modal-body">
 				<form id="CommunicationsForm" class="needs-validation" novalidate>
 					<div class="row">			
-						<div class="col"><!-- Col 1 -->
+						<div class="col">
 							<input id="commParcel_ID" name="Parcel_ID" type="text" readonly hidden>
 							<table class="table table-striped table-sm ">
 								<tbody id="CommunicationsTbody">
@@ -617,6 +620,7 @@
         </div>
     </div>
 </div>
+-->
 
 <div id="ConfirmationModal" class="modal fade" role="dialog" tabindex="-1">
 	    <div class="modal-dialog modal-sm">
