--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -263,12 +263,14 @@
 	     </div><!-- end of Admin -->
 
 	    <div class="tab-pane" role="tabpanel" id="ConfigPage">
-			<h4>Config</h4>
+			<h5>Config</h5>
             <a data-ConfigName="NEW-VALUE" href="#" class="btn btn-sm btn-primary NewConfig" role="button">New Config Value</a>
-		    <table id="ConfigListDisplay" class="table table-striped table-sm mt-2">
-		    	<tbody>
-		    	</tbody>
-		    </table>
+
+			<table class="table table-striped">
+				<tbody id="ConfigListTbody">
+				</tbody>
+			</table>
+
 	 	</div><!-- end of Config -->
 
 	</div><!-- end of main tab content -->
@@ -276,6 +278,8 @@
 		<!--
 		<div id="MessageDisplay" class="m-2"></div>
 		-->
+
+
 
 </div><!-- end of main container -->
 
@@ -588,6 +592,44 @@
             </div>
         </div>
     </div>
+</div>
+
+<!-- Config Update Modal -->
+<div id="ConfigUpdateModal" class="modal fade" role="dialog" tabindex="-1">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">
+					<img class="m-2" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Update Config Value
+				</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+			</div>
+			<div class="modal-body">
+				<form id="UpdateConfigForm" class="needs-validation" novalidate>
+					<div class="mb-2 form-floating">
+						<input id="updConfigName" name="ConfigName" type="text" class="form-control shadow-none" maxlength="50" required />
+						<label for="updConfigName">Config Name</label>
+						<div class="invalid-feedback">Config Name is required</div>
+					</div>
+					<div class="mb-2 form-floating">
+						<input id="updConfigDesc" name="ConfigDesc" type="text" class="form-control shadow-none" maxlength="100" />
+						<label for="updConfigDesc">Description</label>
+					</div>
+					<div class="mb-2 form-floating">
+						<input id="updConfigValue" name="ConfigValue" type="text" class="form-control shadow-none" maxlength="200" />
+						<label for="updConfigValue">Value</label>
+					</div>
+					<button type="submit" class="btn btn-success shadow-none">
+						<i class="fa fa-floppy-o me-1"></i> Save Config
+					</button>
+					<div id="UpdateConfigMessageDisplay" class="m-2"></div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
 </div>
 
 <!--
