--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -213,49 +213,49 @@
 
 	    <div class="tab-pane" role="tabpanel" id="AdminPage">
 			<div class="row">
-				<div class="col-sm-4 col-md-3">
-				  	<h5>Admin</h5>
-	                <div class="form-group">
-                    	<input type="text" class="form-control mr-2 mb-2 resetval" name="DuesAmt"     	id="DuesAmt"		placeholder="Dues Amount">
-						<label for="FiscalYear">Fiscal Year for which to add Assessments:</label>
-						<select class="form-control mr-2 mb-2" id="FiscalYear">
-						        <option>2025</option>
-						        <option>2026</option>
-						        <option>2027</option>
-						        <option>2028</option>
-						        <option>2029</option>
-                                <option>2030</option>
-                                <option>2031</option>
-                                <option>2032</option>
-                                <option>2033</option>
-                                <option>2034</option>
-                                <option>2035</option>
-						</select>
+				<div class="col-sm-3 col-md-2">
+                    <h5>Admin</h5>
+					<form>
 
-                        <button id="AddAssessments" type="button" class="btn btn-primary form-control  mr-2 mb-2 AdminButton">
-                            <i class="fa fa-usd fa-lg float-left"></i>Add Assessments</button>
-						<button id="DuesEmails" type="button" class="btn btn-primary form-control mr-2 mb-2">
-                            <i class="fa fa-envelope fa-lg float-left"></i>Dues Notice Emails</button>
-                        <button id="PaymentReconcile" type="button" class="btn btn-success form-control mr-2 mb-2 AdminButton">
-                            <i class="fa fa-paypal fa-lg float-left"></i>Payment Reconciliation</button>
-                        <!--
-                        <a id="SalesDownload" type="button" class="btn btn-success form-control mr-2 mb-2" href="#" role="button">
-                            <i class="fa fa-handshake-o fa-lg float-left"></i>County Sales Download</a>
-                        -->
-                        <button id="SalesUpload" type="button" class="btn btn-success form-control mr-2 mb-2 AdminButton">
-                            <i class="fa fa-handshake-o fa-lg float-left"></i>Sales Upload</button>
-	                </div>
-				  </div>
-				  <div class="col-sm-8 col-md-9">
-                		<h5 id="AdminResults">Results</h5>
-	                	<div id="AdminDownloadLinks" class="float-right m-2"></div>
-                        <div id="DuesButtons"></div>
-                        <div id="ResultMessage" class="m-2"></div>
-                        <table id="DuesListDisplay" class="table table-striped table-sm">
-			            	<tbody>
-			               	</tbody>
-						</table>
-				  </div>
+						<div class="mb-2 form-floating">
+							<input  id="DuesAmt" name="DuesAmt" type="number" step="0.01" min="0" class="form-control shadow-none" >
+                            <label for="DuesAmt">Dues Amount</label>
+						</div>
+
+						<div class="mb-2 form-floating">
+							<select  id="FiscalYear" name="FiscalYear" class="form-select shadow-none">
+								<!-- Options will be populated dynamically by admin.js -->
+							</select>
+                            <label for="FiscalYear">Fiscal Year for Add Assessments</label>
+						</div>
+
+                    	<button id="AddAssessmentsButton" type="button" class="btn btn-success mb-2">
+							<i class="fa fa-usd fa-lg me-1"></i>Add Assessments
+						</button>
+                    </form>
+
+					<button id="DuesEmailsButton" type="button" class="btn btn-primary mt-3 ">
+                        <i class="fa fa-envelope fa-lg me-1"></i>Dues Notice Emails
+					</button>
+                    <button id="PaymentReconcileButton" type="button" class="btn btn-info mt-2 ">
+                        <i class="fa fa-paypal fa-lg me-1"></i>Payment Reconciliation
+					</button>
+                    <button id="SalesUploadButton" type="button" class="btn btn-warning mt-2 ">
+                        <i class="fa fa-handshake-o fa-lg me-1"></i>Sales Upload
+					</button>
+				</div>
+				
+				<div class="col-sm-9 col-md-10">
+					<h5 id="AdminResults">Results</h5>
+	                <div id="AdminDownloadLinks" class="float-right m-2"></div>
+                    <div id="DuesButtons"></div>
+                    <div id="ResultMessage" class="m-2"></div>
+		            <table class="table table-striped table-sm">
+		            	<tbody id="DuesListDisplayTbody">
+		               	</tbody>
+		           	</table>
+				</div>
+
 			</div><!-- row -->
 
 	     </div><!-- end of Admin -->
@@ -281,6 +281,30 @@
 	<!-- <div id="MessageDisplay" class="m-2"></div> -->
 
 </div><!-- end of main container -->
+
+<!-- Add Assessments Confirmation Modal -->
+<div class="modal fade" id="AddAssessmentsConfirmModal" tabindex="-1" aria-labelledby="AddAssessmentsConfirmModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="AddAssessmentsConfirmModalLabel">Confirm Add Assessments</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p>Are you sure you want to add assessments to ALL properties for:</p>
+				<ul>
+					<li><strong>Fiscal Year:</strong> <span id="ConfirmFiscalYear"></span></li>
+					<li><strong>Dues Amount:</strong> $<span id="ConfirmDuesAmt"></span></li>
+				</ul>
+				<div id="AddAssessmentsError" class="text-danger"></div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-success" id="ConfirmAddAssessmentsBtn">Yes, Add Assessments</button>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 <!-- Modal -->
@@ -661,22 +685,6 @@
 </div>
 -->
 
-<div id="ConfirmationModal" class="modal fade" role="dialog" tabindex="-1">
-	    <div class="modal-dialog modal-sm">
-	      <div class="modal-content">
-	        <div class="modal-header">
-	            <h5 class="modal-title">Confirmation</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-	        </div>
-            <div id="ConfirmationMessage" class="modal-body">
-            </div>
-	        <div class="modal-footer">
-	        	<div id="ConfirmationButton">
-	        	</div>
-	        </div>
-	      </div>
-	    </div>
-</div>
 
 <div id="FileUploadModal" class="modal fade" role="dialog" tabindex="-1">
     <div class="modal-dialog">
