--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -216,24 +216,20 @@
 				<div class="col-sm-3 col-md-2">
                     <h5>Admin</h5>
 					<form>
-
 						<div class="mb-2 form-floating">
 							<input  id="DuesAmt" name="DuesAmt" type="number" step="0.01" min="0" class="form-control shadow-none" >
                             <label for="DuesAmt">Dues Amount</label>
 						</div>
-
 						<div class="mb-2 form-floating">
 							<select  id="FiscalYear" name="FiscalYear" class="form-select shadow-none">
 								<!-- Options will be populated dynamically by admin.js -->
 							</select>
                             <label for="FiscalYear">Fiscal Year for Add Assessments</label>
 						</div>
-
                     	<button id="AddAssessmentsButton" type="button" class="btn btn-success mb-2">
 							<i class="fa fa-usd fa-lg me-1"></i>Add Assessments
 						</button>
                     </form>
-
 					<button id="DuesEmailsButton" type="button" class="btn btn-primary mt-3 ">
                         <i class="fa fa-envelope fa-lg me-1"></i>Dues Notice Emails
 					</button>
@@ -249,7 +245,7 @@
 					<h5 id="AdminResults">Results</h5>
 	                <div id="AdminDownloadLinks" class="float-right m-2"></div>
                     <div id="DuesButtons"></div>
-                    <div id="ResultMessage" class="m-2"></div>
+                    <div id="AdminMessage" class="m-2"></div>
 		            <table class="table table-striped table-sm">
 		            	<tbody id="DuesListDisplayTbody">
 		               	</tbody>
