--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -135,24 +135,24 @@
 				    <div class="col-sm-4 col-md-3 col-xl-2">
 				    	<h5>Reports</h5>
 							<button id="SalesReport" data-reportTitle="County Reported Sales of HOA properties"
-	                    		type="button" role="button" class="btn btn-primary reportRequest me-1 mb-2">
+	                    		type="button" role="button" class="btn btn-primary reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-handshake-o"></i> Sales Report
 							</button>
 	                    	<button id="PaidDuesCountsReport" data-reportTitle="Paid Dues Counts Report"
-	                    		type="button" role="button" class="btn btn-success reportRequest me-1 mb-2">
+	                    		type="button" role="button" class="btn btn-success reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-usd"></i> Paid Dues Counts
 							</button>
 							<button id="UnpaidDuesRankingReport" data-reportTitle="Unpaid Dues Ranking Report"
-								type="button" role="button" class="btn btn-warning reportRequest me-1 mb-2">
+								type="button" role="button" class="btn btn-warning reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-bank"></i> Unpaid Dues Rank
 							</button>
 
 							<button id="Duesletter1Report" data-reportTitle="Dues Letter 1st Notice Mailing List"
-								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2">
+								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-envelope"></i> Dues Letter 1st Notice
 							</button>
 							<button id="Duesletter2Report" data-reportTitle="Dues Letter 2nd Notice Mailing List"
-								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2">
+								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-envelope"></i> Dues Letter 2nd Notice
 							</button>
 							<!--
@@ -226,17 +226,17 @@
 							</select>
                             <label for="FiscalYear">Fiscal Year for Add Assessments</label>
 						</div>
-                    	<button id="AddAssessmentsButton" type="button" class="btn btn-success mb-2">
+                    	<button id="AddAssessmentsButton" type="button" class="btn btn-success mb-2 shadow-none">
 							<i class="fa fa-usd fa-lg me-1"></i>Add Assessments
 						</button>
                     </form>
-					<button id="DuesEmailsButton" type="button" class="btn btn-primary mt-3 ">
+					<button id="DuesEmailsButton" type="button" class="btn btn-primary mt-3 shadow-none">
                         <i class="fa fa-envelope fa-lg me-1"></i>Dues Notice Emails
 					</button>
-                    <button id="PaymentReconcileButton" type="button" class="btn btn-info mt-2 ">
+                    <button id="PaymentReconcileButton" type="button" class="btn btn-info mt-2 shadow-none">
                         <i class="fa fa-paypal fa-lg me-1"></i>Payment Reconciliation
 					</button>
-                    <button id="SalesUploadButton" type="button" class="btn btn-warning mt-2 ">
+                    <button id="SalesUploadButton" type="button" class="btn btn-warning mt-2 shadow-none">
                         <i class="fa fa-handshake-o fa-lg me-1"></i>Sales Upload
 					</button>
 				</div>
