--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -103,11 +103,9 @@
 								<button id="NewOwnerButton" class="btn btn-warning me-1 mb-1 " type="button" role="button">
 									<i class="fa fa-user-circle-o me-1"></i> New Owner
 								</button>
-								<!--
 								<button id="CommunicationsButton" class="btn btn-info me-1 mb-1 " type="button" role="button">
 									<i class="fa fa-bullhorn me-1"></i> Communications
 								</button>
-								-->
 
 								<div id="DetailMessageDisplay" class="m-2"></div>
 					</form>
@@ -649,7 +647,6 @@
 	</div>
 </div>
 
-<!--
 <div id="CommunicationsModal" class="modal fade" role="dialog" tabindex="-1">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
@@ -665,7 +662,20 @@
 					<div class="row">			
 						<div class="col">
 							<input id="commParcel_ID" name="Parcel_ID" type="text" readonly hidden>
-							<table class="table table-striped table-sm ">
+							<colgroup>
+<!--
+								<col style="width: 100;">
+								<col style="width: 10%;">
+								<col style="width: 10%;">
+								<col style="width: 10%;">
+								<col style="width: 10%;">
+								<col style="width: 10%;">
+								<col style="width: 20%;">
+CommID	Datetime	Type	Email	Sent	Address	Name	Description
+								-->
+
+							</colgroup>
+							<table class="table table-striped table-sm " style="width: 100%; table-layout: fixed;">
 								<tbody id="CommunicationsTbody">
 								</tbody>
 							</table>
@@ -679,8 +689,6 @@
         </div>
     </div>
 </div>
--->
-
 
 <div id="FileUploadModal" class="modal fade" role="dialog" tabindex="-1">
     <div class="modal-dialog">
