--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -153,51 +153,11 @@
 								type="button" role="button" class="btn btn-info reportRequest me-1 mb-2 shadow-none">
 								<i class="fa fa-envelope"></i> Dues Letter 2nd Notice
 							</button>
-							<!--
-							<h6 class="mt-2" style="font-weight: bold; text-decoration: underline;">Mailing Lists</h6>
-							<div class="form-check">
-								<input class="form-check-input shadow-none" type="radio" name="MailingListName" id="MailingListWelcomeLetters" value="WelcomeLetters" checked>
-								<label class="form-check-label ms-2" for="MailingListWelcomeLetters">
-									Welcome Letters
-								</label>
-							</div>
-							<div class="form-check form-check-inline ms-4">
-								<input class="form-check-input shadow-none" type="checkbox" id="LogWelcomeLetters" name="LogWelcomeLetters">
-								<label class="form-check-label" for="LogWelcomeLetters">
-									Mark as MAILED
-								</label>
-							</div>
-							<div class="form-check">
-								<input class="form-check-input shadow-none" type="radio" name="MailingListName" id="MailingListNewsletter" value="Newsletter">
-								<label class="form-check-label ms-2" for="MailingListNewsletter">
-									Newsletter (ALL addresses)
-								</label>
-							</div>
-							<div class="form-check">
-								<input class="form-check-input shadow-none" type="radio" name="MailingListName" id="MailingListDuesletter1" value="Duesletter1">
-								<label class="form-check-label ms-2" for="MailingListDuesletter1">
-									Dues Letter 1st Notice
-								</label>
-							</div>
-							<div class="form-check">
-								<input class="form-check-input shadow-none" type="radio" name="MailingListName" id="MailingListDuesletter2" value="Duesletter2">
-								<label class="form-check-label ms-2" for="MailingListDuesletter2">
-									Dues Letter 2nd Notice
-								</label>
-							</div>
-							<div class="form-check form-check-inline ms-4">
-								<input class="form-check-input shadow-none" type="checkbox" id="LogDuesLetterSend" name="LogDuesLetterSend">
-								<label class="form-check-label ms-2" for="LogDuesLetterSend">
-									Mark Letters as MAILED
-								</label>
-							</div>
-							-->
 							<div id="ReportsMessageDisplay" class="m-2"></div>
 
 					</div>
 				    <div class="col-sm-8 col-md-9 col-xl-10">
 	                	<div id="ReportDownloadLinks" class="float-end m-2"></div>
-
                         <h5 id="ReportHeader"></h5>
 	                	<h6 id="ReportRecCnt"></h6>
 						<table class="table table-striped table-sm">
@@ -241,11 +201,12 @@
 				
 				<div class="col-sm-9 col-md-10">
 					<h5 id="AdminResults">Results</h5>
-	                <div id="AdminDownloadLinks" class="float-right m-2"></div>
-                    <div id="DuesButtons"></div>
-                    <div id="AdminMessage" class="m-2"></div>
+	                <h6 id="AdminRecCnt"></h6>
+					<div id="AdminDownloadLinks" class="float-right m-2"></div>
+	                <div id="DuesNoticeEmailButtons"></div>
+                    <div id="AdminMessageDisplay" class="m-2"></div>
 		            <table class="table table-striped table-sm">
-		            	<tbody id="DuesListDisplayTbody">
+		            	<tbody id="AdminListDisplayTbody">
 		               	</tbody>
 		           	</table>
 				</div>
@@ -662,20 +623,7 @@
 					<div class="row">			
 						<div class="col">
 							<input id="commParcel_ID" name="Parcel_ID" type="text" readonly hidden>
-							<colgroup>
-<!--
-								<col style="width: 100;">
-								<col style="width: 10%;">
-								<col style="width: 10%;">
-								<col style="width: 10%;">
-								<col style="width: 10%;">
-								<col style="width: 10%;">
-								<col style="width: 20%;">
-CommID	Datetime	Type	Email	Sent	Address	Name	Description
-								-->
-
-							</colgroup>
-							<table class="table table-striped table-sm " style="width: 100%; table-layout: fixed;">
+							<table class="table table-striped table-sm" >
 								<tbody id="CommunicationsTbody">
 								</tbody>
 							</table>
