--- a/src/payDues.html
+++ b/src/payDues.html
@@ -19,7 +19,6 @@
     
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="favicon.ico?ver=1.001">
-    <link rel="manifest" href="manifest.json">
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -71,7 +70,7 @@
         PROD
         <script src="https://www.paypal.com/sdk/js?client-id=AfPzVjZCh8dqc1d4pYuzGRCBlcEkS8-MySH5qxewT575KjBu3hJect0Aw3J2ZBkhexwABLk3rMgkRujv&disable-funding=credit"></script>
     -->
-    <script src="https://www.paypal.com/sdk/js?client-id=AUAQM6mbhIn8s9I3Omv3RBg9qcCLMTuYghYeoGEAVj0cRJ6FCSWsdCh4qEQt3fkoC5PIj3yNV50R9VQC&buyer-country=US&currency=USD&components=buttons&enable-funding=venmo,card"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AUAQM6mbhIn8s9I3Omv3RBg9qcCLMTuYghYeoGEAVj0cRJ6FCSWsdCh4qEQt3fkoC5PIj3yNV50R9VQC&disable-funding=credit&buyer-country=US&currency=USD&components=buttons&enable-funding=venmo,card"></script>
     <script src="js/payDues.js" type="module"></script>
 
 </body>
