--- a/src/index.html
+++ b/src/index.html
@@ -67,10 +67,10 @@
                     -->
                     <img id="HomePhoto" class="rounded mb-2 ml-2" src="https://grhawebstorage.blob.core.windows.net/images/QH-sign.JPG" alt="Quail Hollow sign" width="65%" />
                 </div>
-                President: <b><span class="PresidentName"></span></b>
+                President <b><span class="PresidentName"></span></b>
                 <span class="PresidentPhone"></span>
                 <br>email: <a class="PresidentEmail" href=""></a>
-                <br>Treasurer: <b><span class="TreasurerName"></span></b>
+                <br>Treasurer <b><span class="TreasurerName"></span></b>
                 <span class="TreasurerPhone"></span>
                 <br>email: <a class="TreasurerEmail" href=""></a>
                 <a data-bs-toggle="modal" href="#MapModal" class="d-none d-sm-block"> 
@@ -115,11 +115,11 @@
                 </div>
 
                 <div class="float-start my-2">
-                    The GRHA Board of Trustees meets the 2nd Thursday of every month at 7:00pm at the <b>Huber Heights Library Conference Room</b>. 
+                    The GRHA Board of Trustees meets the 2nd Thursday of every month at 7:00pm at the <b>Huber Heights Chamber of Commerce, 6428 Chambersburg Rd, Huber Heights, OH 45424</b>. 
                     This meeting is open to all members of the GRHA.
                     <p>
-                        <a href="https://www.google.com/maps/place/Dayton+Metro+Library+-+Huber+Heights+Branch/@39.843046,-84.1196126,17z/data=!4m14!1m7!3m6!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!2sDayton+Metro+Library+-+Huber+Heights+Branch!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6!3m5!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-                            <b>(Click here for map to Dayton Metro Library - Huber Heights)</b>
+                        <a href="https://www.google.com/maps/place/6428+Chambersburg+Rd,+Dayton,+OH+45424/@39.8464386,-84.1150373,17z/data=!3m1!4b1!4m6!3m5!1s0x883f7d45f26ebb2d:0x7d7499982f426a94!8m2!3d39.8464345!4d-84.1124624!16s%2Fg%2F11c4cjpfkg?hl=en&entry=ttu&g_ep=EgoyMDI1MDYyMy4yIKXMDSoASAFQAw%3D%3D" target="_blank">
+                            <b>(Click here for map to Huber Heights Chamber of Commerce)</b>
                         </a>
                     </p>
                     <h6>Meeting Minutes can be found in the Quail Call newsletter</h6>
@@ -428,18 +428,14 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    The GRHA Board of Trustees meets the 2nd Thursday of every month at 7:00pm at the <b>Huber Heights Library Conference Room</b>. 
+                    The GRHA Board of Trustees meets the 2nd Thursday of every month at 7:00pm at the <b>Huber Heights Chamber of Commerce, 6428 Chambersburg Rd, Huber Heights, OH 45424</b>. 
                     This meeting is open to all members of the GRHA.
                     <p>
-                        <a target="_blank" href="https://www.google.com/maps/place/Dayton+Metro+Library+-+Huber+Heights+Branch/@39.843046,-84.1196126,17z/data=!4m14!1m7!3m6!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!2sDayton+Metro+Library+-+Huber+Heights+Branch!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6!3m5!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">
-                            <b>(Click here for map to Dayton Metro Library - Huber Heights)</b>
+                        <a href="https://www.google.com/maps/place/6428+Chambersburg+Rd,+Dayton,+OH+45424/@39.8464386,-84.1150373,17z/data=!3m1!4b1!4m6!3m5!1s0x883f7d45f26ebb2d:0x7d7499982f426a94!8m2!3d39.8464345!4d-84.1124624!16s%2Fg%2F11c4cjpfkg?hl=en&entry=ttu&g_ep=EgoyMDI1MDYyMy4yIKXMDSoASAFQAw%3D%3D" target="_blank">
+                            <b>(Click here for map to Huber Heights Chamber of Commerce)</b>
                         </a>
                     </p>
                     <h5>Meeting Minutes can be found in the Quail Call newsletter</h5>
-                    <!--
-                    <h5>*** Due to COVID-19, Public Meetings have been cancelled ***</h5>
-                    <h6 class="m-3">The Board will continue to meet virtually and post messages on this website and Facebook</h6>
-                    -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
