--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -223,6 +223,17 @@
 					
 								<button type="submit" class="btn btn-primary">Update</button>
 								<div id="BoardMessageDisplay" class="m-2"></div>
+
+								<div class="mb-2 form-floating">
+									<textarea id="WebsiteMessage" name="WebsiteMessage" type="text" class="form-control shadow-none" style="height: 150px"></textarea>
+									<label   for="WebsiteMessage">Website Message</label>
+									<div class="valid-feedback">
+										Valid
+									</div>
+									<div class="invalid-feedback">
+										Please enter a Website Message
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
