--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
                 <button class="btn btn-warning mt-2 link-tile" data-dir="Contacts" type="button" role="button" id="ContactsLinkTile">
                     <i class="fa fa-phone fa-2x float-start"></i> Contact <br>us</button>
 
+                <div id="PresidentWebsiteMessage" class="mt-4 mb-2"></div>
                 <div id="EventPhotos" class="mt-4 mb-2"></div>
                 <!--
                 <div class="float-start d-none d-sm-block my-3">
